# spark-tui

./: .gitignore  Cargo.toml  README.md  sample-eventlog.json
src/: app.rs  events.rs  main.rs  models.rs  parser.rs
src/ui/: mod.rs  state.rs
src/ui/components/: environment.rs  executors.rs  jobs.rs  mod.rs  sql.rs  stages.rs  tasks.rs
test-logs/: README.md  data-skew-scenario.json  executor-failures-scenario.json  oom-scenario.json  slow-tasks-scenario.json  sql-queries-scenario.json
