[package]
name = "spark-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Apache Spark event log analysis"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "spark-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.8"

[dev-dependencies]
tokio-test = "0.4"